@@ -20,6 +20,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Fixed problem in CKeditor where toolbar was lost when maximizing a CKeditor containing a very long text
 - In content edited with CKeditor, force margin-bottom under tables to 0em because it is rendered this way
   with appy.pod (2 tables above each other are glued together by default in LibreOffice)
+- Added getProposingGroup index to plone.app.querystring fields selectable on a Collection
 
 4.1b7 (2018-03-19)
 ------------------
